k8s/admin-secrets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hhm-admin
  labels:
    kubernetes.io/metadata.name: hhm-admin
    app.kubernetes.io/part-of: hhm-admin
